# VHC-Inventory-Scrapper

./: .env.example  .gitignore  CONDITION_REPORT_CONTRACT.md  README.md  SCRAPER_CR_PAYLOAD.md  TWO_CHROME_SETUP.md  pyproject.toml  spec_v2.md
data/: auction_location_overrides.json
docs/: OVE_2FA_SMS_WORKFLOW_PLAN.md
ove_scraper/: __init__.py  ai_zip_resolver.py  api_client.py  auth_lockout.py  automation_lock.py  browser.py  cdp_browser.py  condition_report_normalizer.py  config.py  cr_parsers.py  csv_transform.py  deep_scrape.py  hot_deal_db.py  hot_deal_payload.py  hot_deal_pipeline.py  hot_deal_report.py  hot_deal_rule_catalog.py  hot_deal_screener.py  keep_awake.py  location_zip_lookup.py  logging_utils.py  main.py  notifier.py  openai_web_search.py  resource_utils.py  schemas.py  state_centroid_zips.py  sync_service.py
scripts/: analyze_keepalive_telemetry.py  benchmark_concurrent_scrape.py  debug_cr_page.py  debug_ove_cr_link.py  debug_ove_page.py  debug_ove_vin_search.py  emergency_stop_all.ps1  emergency_stop_login_a.ps1  emergency_stop_login_b.ps1  install_ove_tasks.ps1  lux_auth_handoff.py  manual_login_a.ps1  manual_login_b.ps1  report_unresolved_locations.py  restart_scraper.ps1  scraper_status.ps1  start_ove_browser.ps1  start_ove_browser_sync.ps1  start_ove_scraper.ps1
tests/: test_ai_zip_resolver.py  test_auth_lockout.py  test_automation_lock.py  test_cdp_browser.py  test_csv_transform.py  test_deep_scrape.py  test_deep_scrape_playwright_errors.py  test_export_shrinkage_canary.py  test_hot_deal_db.py  test_hot_deal_payload.py  test_sync_service.py  (+13 more)
(+2 files in other folders)
